[package]
name = "fractal-utils"
version = "0.3.3"
authors = [
    "Eric Remigino <eric@fractal.global>",
    "Iban Eguia <iban@fractal.global>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/FractalGlobal/utils-rs"
documentation = "https://docs.rs/fractal-utils/"
description = """
Utilities for working with Fractal Global Credits.
"""
keywords = ["fractal", "global", "credits", "utils"]

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
num = "^0.1"

[dev-dependencies]
rand = "^0.3"
